--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -5,48 +5,118 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Ticket Support System</title>
     <style>
-        body { font-family: sans-serif; max-width: 800px; margin: 0 auto; padding: 20px; }
-        .form-group { margin-bottom: 15px; }
-        input, textarea { width: 100%; padding: 8px; margin-top: 5px; }
-        button { background-color: #007bff; color: white; padding: 10px 15px; border: none; cursor: pointer; }
+        body { font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif; max-width: 800px; margin: 0 auto; padding: 20px; background-color: #f4f4f9; }
+
+        /* Sections */
+        #auth-section, #dashboard-section { background: white; padding: 30px; border-radius: 8px; box-shadow: 0 2px 10px rgba(0,0,0,0.1); margin-bottom: 20px; }
+        .hidden { display: none; }
+
+        /* Forms */
+        input, textarea { width: 100%; padding: 10px; margin: 10px 0; border: 1px solid #ddd; border-radius: 4px; box-sizing: border-box; }
+        button { background-color: #007bff; color: white; padding: 10px 20px; border: none; border-radius: 4px; cursor: pointer; font-size: 16px; width: 100%; }
         button:hover { background-color: #0056b3; }
-        .ticket-card { border: 1px solid #ddd; padding: 15px; margin-bottom: 10px; border-radius: 5px; }
-        .status-open { color: green; font-weight: bold; }
-        .delete-btn { background-color: #dc3545; float: right; }
+        button.secondary { background-color: #6c757d; margin-top: 10px; }
+
+        /* Tickets */
+        .ticket-card { border-left: 5px solid #007bff; background: #fff; padding: 15px; margin-bottom: 10px; box-shadow: 0 2px 5px rgba(0,0,0,0.05); }
+        .status-open { color: #28a745; font-weight: bold; font-size: 0.9em; }
+        .delete-btn { background-color: #dc3545; width: auto; float: right; padding: 5px 10px; font-size: 12px; }
     </style>
 </head>
 <body>
 
-<h1>🎫 Ticket Support System</h1>
+<h1 style="text-align: center; color: #333;">🎫 Support Portal</h1>
 
-<div style="background: #f9f9f9; padding: 20px; border-radius: 8px;">
-    <h3>Create New Ticket</h3>
-    <div class="form-group">
-        <label>Title:</label>
-        <input type="text" id="title" placeholder="e.g. Login is broken">
-    </div>
-    <div class="form-group">
-        <label>Description:</label>
-        <textarea id="description" placeholder="Describe the issue..."></textarea>
-    </div>
-    <button onclick="createTicket()">Submit Ticket</button>
+<div id="auth-section">
+    <h2 id="auth-title">Register</h2>
+    <input type="text" id="auth-username" placeholder="Username">
+    <input type="password" id="auth-password" placeholder="Password">
+    <button onclick="registerUser()">Register</button>
+
+    <p style="text-align: center; margin-top: 15px;">
+        Already have an account?
+        <a href="#" onclick="triggerLogin()">Login here</a>
+    </p>
 </div>
 
-<hr>
+<div id="dashboard-section" class="hidden">
+    <div style="display: flex; justify-content: space-between; align-items: center;">
+        <h3>My Tickets</h3>
+        <button class="secondary" style="width: auto;" onclick="logout()">Logout</button>
+    </div>
 
-<h3>Current Tickets</h3>
-<div id="ticketList">Loading...</div>
+    <div style="background: #f8f9fa; padding: 15px; margin: 20px 0; border-radius: 5px;">
+        <h4>Create New Ticket</h4>
+        <input type="text" id="ticket-title" placeholder="Title (e.g. Login Error)">
+        <textarea id="ticket-desc" placeholder="Description"></textarea>
+        <button onclick="createTicket()">Submit Ticket</button>
+    </div>
+
+    <div id="ticketList">Loading...</div>
+</div>
 
 <script>
     const API_URL = '/tickets';
+    const AUTH_URL = '/register';
 
-    // 1. Load Tickets on Page Start
+    // --- AUTHENTICATION LOGIC ---
+
+    async function registerUser() {
+        const username = document.getElementById('auth-username').value;
+        const password = document.getElementById('auth-password').value;
+
+        const response = await fetch(AUTH_URL, {
+            method: 'POST',
+            headers: { 'Content-Type': 'application/json' },
+            body: JSON.stringify({ username, password })
+        });
+
+        if (response.ok) {
+            alert("Registration Successful! Please Login.");
+            triggerLogin(); // Ask browser to prompt for password
+        } else {
+            alert("Registration Failed (Username might be taken).");
+        }
+    }
+
+    function triggerLogin() {
+        // Trick to trigger browser Basic Auth popup:
+        // We try to access a protected page. Browser will intercept and ask for password.
+        window.location.reload();
+    }
+
+    function logout() {
+        // Trick to clear Basic Auth: modify URL with fake credentials
+        // This is a browser hack because there is no official "Logout" in Basic Auth
+        window.location.href = window.location.href.replace('//', '//logout:logout@');
+    }
+
+    // --- TICKET LOGIC ---
+
     async function loadTickets() {
-        const response = await fetch(API_URL);
-        const tickets = await response.json();
+        try {
+            const response = await fetch(API_URL);
+
+            if (response.status === 401 || response.status === 403) {
+                // User is NOT logged in -> Show Register/Login
+                document.getElementById('auth-section').classList.remove('hidden');
+                document.getElementById('dashboard-section').classList.add('hidden');
+            } else {
+                // User IS logged in -> Show Dashboard
+                document.getElementById('auth-section').classList.add('hidden');
+                document.getElementById('dashboard-section').classList.remove('hidden');
+
+                const tickets = await response.json();
+                renderTickets(tickets);
+            }
+        } catch (e) {
+            console.error("Error:", e);
+        }
+    }
+
+    function renderTickets(tickets) {
         const list = document.getElementById('ticketList');
         list.innerHTML = '';
-
         tickets.forEach(ticket => {
             const div = document.createElement('div');
             div.className = 'ticket-card';
@@ -60,10 +130,9 @@
         });
     }
 
-    // 2. Create Ticket Function
     async function createTicket() {
-        const title = document.getElementById('title').value;
-        const description = document.getElementById('description').value;
+        const title = document.getElementById('ticket-title').value;
+        const description = document.getElementById('ticket-desc').value;
 
         await fetch(API_URL, {
             method: 'POST',
@@ -71,21 +140,19 @@
             body: JSON.stringify({ title, description })
         });
 
-        // Clear form and reload list
-        document.getElementById('title').value = '';
-        document.getElementById('description').value = '';
+        document.getElementById('ticket-title').value = '';
+        document.getElementById('ticket-desc').value = '';
         loadTickets();
     }
 
-    // 3. Delete Ticket Function
     async function deleteTicket(id) {
-        if(confirm('Are you sure?')) {
+        if(confirm('Delete this ticket?')) {
             await fetch(`${API_URL}/${id}`, { method: 'DELETE' });
             loadTickets();
         }
     }
 
-    // Initial Load
+    // Start App
     loadTickets();
 </script>
 </body>
